# knot-cloud-sdk-c

./: .gitignore  Makefile.am  README.md  compile_unit.sh  test-env.sh  unit_test.sh
src/: knot_cloud.c  knot_cloud.h  parser.c  parser.h
test/integration/: expected.txt  integration_test.c
test/unit/parser/: expected.txt  parser-unit-test.c  parser_unit_test.c
tests/integration/: expected.txt  integration_test.c
tests/scripts/: integration_test.sh  parser_unit_test.sh
tests/unit/parser/: expected.txt  parser_unit_test.c
